rollout-draft/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout-frontend
spec:
  strategy:
    canary:
      canaryService: rollout-frontend-canary
      stableService: rollout-frontend-stable
      trafficRouting:
        istio:
          virtualService:
            name: rollout-frontend-vsvc
            routes:
            - primary # At least one route is required
      steps:
      - setWeight: 10
      - pause: { duration: 20s }  
      - setWeight: 20
      - pause: { duration: 20s } 
      - setWeight: 80
      - pause: { duration: 20s } 
      - setWeight: 100
  selector:
      matchLabels:
        app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      containers:
      - name: front
        image: gcr.io/bank-of-anthos/frontend:v0.4.3
        volumeMounts:
        - name: publickey
          mountPath: "/root/.ssh"
          readOnly: true
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 10
        livenessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 15
          timeoutSeconds: 30
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 256Mi
      volumes:
      - name: publickey
        secret:
          secretName: jwt-key
          items:
          - key: jwtRS256.key.pub
            path: publickey
