rollout-draft/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollout-frontend-canary
spec:
  selector:
    app: frontend 
  ports:
  - name: http
    port: 80
    targetPort: 8080
