rollout-draft/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollout-frontend-stable
spec:
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 8080
