rollout-draft/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rollout-frontend-vsvc
spec:
  gateways:
  - frontend-gateway
  hosts:
  - rollout-frontend.local
  http:
  - name: primary  # Should match spec.strategy.canary.trafficRouting.istio.virtualService.routes
    route:
    - destination:
        host: rollout-frontend-stable  # Should match spec.strategy.canary.stableService\
        port:
          number: 80
      weight: 100
    - destination:
        host: rollout-frontend-canary  # Should match spec.strategy.canary.canaryService
        port:
          number: 80
      weight: 0
